--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   },
   "dependencies": {
     "azle": "^0.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
